--- a/index.css
+++ b/index.css
@@ -1,96 +1,93 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 html {
-    font-size: 80%;
-    background-color: #ccc;
-    font-family: 'Times New Roman', Times, serif;
+  font-size: 80%;
+  background-color: #ccc;
+  font-family: "Times New Roman", Times, serif;
 }
 :root {
-    --margin-bottom-h: 10px;
-    --margin-bottom-f: 5px;
-    --my-color: #039688;
+  --margin-bottom-h: 10px;
+  --margin-bottom-f: 5px;
+  --my-color: #039688;
 }
 #main {
-    background-color: #fff;
-    margin: 3% auto;
-    width: 345px;
-    
-    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, .5);
+  background-color: #fff;
+  margin: 3% auto;
+  width: 345px;
+
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.5);
 }
 #form-1 {
-    padding: 20px;
+  padding: 20px;
 }
 #form-1 .heading h3 {
-    font-size: 17px;
-    text-align: center;
-    margin-bottom: var(--margin-bottom-h);
-    color: var(--my-color);
+  font-size: 17px;
+  text-align: center;
+  margin-bottom: var(--margin-bottom-h);
+  color: var(--my-color);
 }
 #form-1 .heading p {
-    font-size: 14px;
-    text-align: center;
-    opacity: 0.7;
-    margin-bottom: var(--margin-bottom-h);
+  font-size: 14px;
+  text-align: center;
+  opacity: 0.7;
+  margin-bottom: var(--margin-bottom-h);
 }
 
 #form-1 .form-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: var(--margin-bottom-h);
+  display: flex;
+  flex-direction: column;
+  margin-bottom: var(--margin-bottom-h);
 }
 #form-1 .form-group label {
-    font-size: 16px;
-    font-weight: 600;
-    margin-bottom: var(--margin-bottom-f);
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: var(--margin-bottom-f);
 }
 #form-1 .form-group input {
-    padding: 5px 8px;
-    outline: none;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    margin-bottom: var(--margin-bottom-f);
+  padding: 5px 8px;
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-bottom: var(--margin-bottom-f);
 }
 #form-1 .form-group .form-message {
-    font-size: 15px;
+  font-size: 15px;
 }
 #form-1 .form-group.invalid input {
-    border-color: red;
+  border-color: red;
 }
 #form-1 .form-group.invalid .form-message {
-    color: red;
+  color: red;
 }
 
 #form-1 .form-group.gender {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    font-size: 17px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  font-size: 17px;
 }
 #form-1 .form-group.gender label {
-    
 }
 #form-1 .form-group.gender .input-form {
-   
-    margin: 0 5px;
-    width: 17px;
-    height: 17px;
-    
+  margin: 0 5px;
+  width: 17px;
+  height: 17px;
 }
 
 #form-1 .form-submit {
-    padding: 8px;
-    width: 100%;
-    font-size: 16px;
-    font-weight: 600;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background: var(--my-color);
-    color: #fff;
+  padding: 8px;
+  width: 100%;
+  font-size: 16px;
+  font-weight: 600;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: var(--my-color);
+  color: #fff;
 }
 #form-1 .form-submit:hover {
-    opacity: 0.8;
-    cursor: pointer;
+  opacity: 0.8;
+  cursor: pointer;
 }
